Enable pacman colors

--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -2,6 +2,7 @@
 HoldPkg = pacman glibc
 Architecture = auto
 CheckSpace
+Color
 SigLevel = Required DatabaseOptional
 LocalFileSigLevel = Optional
 
