--- a/mkinitcpio/etc/mkinitcpio.conf
+++ b/mkinitcpio/etc/mkinitcpio.conf
@@ -1,4 +1,4 @@
 MODULES="i915"
 BINARIES=""
 FILES=""
-HOOKS="base udev autodetect modconf block filesystems keyboard"
+HOOKS="base udev autodetect modconf block filesystems keyboard fsck"
